add email, use it, type fixes, cleanup

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "nodemon src/server.ts | bunyan --color -o short",
     "create-db": "ts-node ./src/services/db/create | bunyan --color",
     "migrate:latest": "knex migrate:latest --knexfile knexfile.migrations.js",
+    "migrate:down": "knex migrate:down --knexfile knexfile.migrations.js",
     "migrate:make": "knex migrate:make --knexfile knexfile.migrations.js",
     "prod:create-db": "NODE_ENV=production ts-node ./src/services/db/create | bunyan --color",
     "prod:migrate:make": "knex migrate:make --knexfile knexfile.migrations.js --env production",
     "build": "rm -rf dist && tsc",
+    "check-circular-deps": "madge --circular --extensions ts ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,6 +24,7 @@
     "@types/node": "^18.15.10",
     "@types/uuid": "^9.0.1",
     "dotenv": "^16.0.3",
+    "madge": "^6.0.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
