--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate:down": "knex migrate:down --knexfile knexfile.migrations.js",
     "migrate:make": "knex migrate:make --knexfile knexfile.migrations.js",
     "prod:create-db": "NODE_ENV=production ts-node ./src/services/db/create | bunyan --color",
-    "prod:migrate:make": "knex migrate:make --knexfile knexfile.migrations.js --env production",
+    "prod:migrate:latest": "knex migrate:latest --knexfile knexfile.migrations.js --env production",
     "build": "rm -rf dist && tsc",
     "check-circular-deps": "madge --circular --extensions ts ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
