--- a/package.json
+++ b/package.json
@@ -17,6 +17,22 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "bcrypt": "^5.1.0",
+    "bunyan": "^1.8.15",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
+    "knex": "^2.4.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
+    "pg": "^8.10.0"
+  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
@@ -29,20 +45,5 @@
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
     "uuid": "^9.0.0"
-  },
-  "dependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "bcrypt": "^5.1.0",
-    "bunyan": "^1.8.15",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "knex": "^2.4.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
-    "pg": "^8.10.0"
   }
 }
