--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "openai": "^3.2.1",
     "pg": "^8.10.0"
   },
   "devDependencies": {
