--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.21.3",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "@types/lodash": "^4.14.192",
     "bcrypt": "^5.1.0",
     "bunyan": "^1.8.15",
     "cookie-parser": "^1.4.6",
@@ -29,6 +30,7 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
