--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "esModuleInterop": true,
     "outDir": "./dist",
     "rootDir": "src",
-    "sourceMap": true
+    "sourceMap": true,
+    "types": ["node", "@types/lodash"]
   },
   "include": ["src/**/*"],
   "exclude": ["./node_modules"]
